--- a/thread/CMakeLists.txt
+++ b/thread/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.7)
 project(thread)
 
-add_executable(basic src/basic.cc)
-add_executable(argument src/argument.cc)
+add_executable(basic src/basic.cc src/print.cc)
+add_executable(argument src/argument.cc src/print.cc)
