Build libprint.a and use it for basic/argument

--- a/thread/CMakeLists.txt
+++ b/thread/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.7)
 project(thread)
 
-add_executable(basic src/basic.cc src/print.cc)
-add_executable(argument src/argument.cc src/print.cc)
+add_library(print src/print.cc)
+
+add_executable(basic src/basic.cc)
+target_link_libraries(basic print)
+
+add_executable(argument src/argument.cc)
+target_link_libraries(argument print)
