--- a/signal/Makefile
+++ b/signal/Makefile
@@ -1,6 +1,10 @@
 .PHONY: all
-all: signal
+all: signal float
 
 .PHONY: signal
 signal:
 	g++ --std=c++17 -O2 signal.cc -o signal
+
+.PHONY: float
+float:
+	g++ --std=c++17 -O2 float.cc -o float
